--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
+    implementation "org.jetbrains.anko:anko:0.10.8"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
