--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:18.1.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.google.firebase:firebase-core:17.0.1'
-    implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
+//    implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
     //Anko
     implementation "org.jetbrains.anko:anko:0.10.8"
     //Circular Image View
