--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,15 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".NewAlertActivity">
+        <activity
+                android:name=".NewAlertActivity"
+                android:theme="@style/AppTheme.NoActionBar"
+        >
         </activity>
-        <activity android:name=".StartUpActivity">
+        <activity
+                android:name=".StartUpActivity"
+                android:theme="@style/AppTheme.NoActionBar"
+        >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
