--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation "org.jetbrains.anko:anko:0.10.8"
     //Circular Image View
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+    // Firebase Cloud Firestore Database
+    implementation 'com.google.firebase:firebase-firestore:20.2.0'
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
