--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     // Firebase Cloud Firestore Database
     implementation 'com.google.firebase:firebase-firestore:20.2.0'
-
+    // Firebase Cloud Messaging
+    implementation 'com.google.firebase:firebase-messaging:19.0.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     //Firebase Realtime Database
     implementation 'com.google.firebase:firebase-database:18.0.1'
