--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,8 @@ dependencies {
 
     // Add dependency
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+
+    // Loading View Dependency
+    implementation 'com.wang.avi:library:2.1.3'
 }
 apply plugin: 'com.google.gms.google-services'
