--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,12 @@ dependencies {
     // Room
     implementation "androidx.room:room-runtime:2.1.0"
     kapt "androidx.room:room-compiler:2.1.0"
-    //firebase
+    // Firebase Auth
     implementation 'com.google.firebase:firebase-auth:18.1.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    // Firebase Core
     implementation 'com.google.firebase:firebase-core:17.0.1'
+
 //    implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
     testImplementation 'junit:junit:4.12'
     //Anko
