--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,5 +67,8 @@ dependencies {
 
     // Loading View Dependency
     implementation 'com.wang.avi:library:2.1.3'
+    // Async Co-routines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-RC2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0-RC2'
 }
 apply plugin: 'com.google.gms.google-services'
