--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-
+        mavenCentral()
         maven {
             url 'https://maven.fabric.io/public'
         }
